--- a/css/main.css
+++ b/css/main.css
@@ -29,5 +29,58 @@ body {
   text-align: center;
   font-family: Helvetica, sans-serif;
   margin-top: 1.3rem;
+  padding-bottom: 1rem;
+}
+
+/* navBar */
+.wrapper {
+  background-color: #DCB0FF;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 50px 30px 50px 30px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.nav-links {
+  padding-right: 5rem;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.nav-item a {
+  display: inline-block;
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #3B1E79;
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+.logo {
+  padding-left: 9rem;
+  font-size: 2rem;
+  text-decoration: none;
+  vertical-align: middle;
 }
 /*# sourceMappingURL=main.css.map */
