--- a/sass/main.scss
+++ b/sass/main.scss
@@ -65,6 +65,8 @@ $white: #fff;
     flex-wrap: wrap;
     padding: 50px 30px 50px 30px;
     transition: 0.2s;
+    position: relative;
+    perspective: 600px
    
   }
   
@@ -73,6 +75,14 @@ $white: #fff;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+
+    // list-style: none;
+    // margin: 0;
+    // padding: 0;
+    // display: flex;
+    // justify-content: center;
   }
   
   .nav-item a {
@@ -82,6 +92,15 @@ $white: #fff;
     color: #3B1E79;
     font-size: 1.1rem;
     font-weight: 600;
+
+    // color: yellow;
+    // text-decoration: none;
+    // font-size: 20px;
+    // background: rgba(0,0,0,0.2);
+    // padding: 10px 20px;
+    // display: inline-block;
+    // margin: 20px;
+    // border-radius: 5px;
   }
   
   .logo {
@@ -93,30 +112,99 @@ $white: #fff;
   }
 
 
+// stripe
+.nav-item {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
 
-// @media all and (max-width: 366px) {
-//     .navbar {
-//         display: block;
-//     }
-    
-//   .nav-links {
-//     padding-right: 5rem;
-//     list-style: none;
-//     display: flex;
-//     flex-wrap: wrap;
-//   }
+
+.dropdown {
+    opacity: 0;
+    position: absolute;
+    overflow: hidden;
+    padding: 20px;
+    top: -20px;
+    border-radius: 2px;
+    transition: all 0.5s;
+    transform: translateY(100px);
+    will-change: opacity;
+    display: none;
+  }
+
+  .trigger-enter .dropdown {
+    display: block;
+  }
+
+  .trigger-enter-active .dropdown {
+    opacity: 1;
+  }
   
-//   .nav-item a {
-//     display: inline-block;
-//     // padding: 8px 16px;
-//     text-decoration: none;
-//     color: #111111;
-//     font-size: 1.1rem;
-//     font-weight: 600;
-//   }
-  
-//   .logo {
-//    text-align: center;
-//    font-size: 1.3rem;
-//   }
-// }
+  .dropdownBackground {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    background: #fff;
+    border-radius: 4px;
+    box-shadow: 0 50px 100px rgba(50,50,93,.1), 0 15px 35px rgba(50,50,93,.15), 0 5px 15px rgba(0,0,0,.1);
+    transition: all 0.3s, opacity 0.1s, transform 0.2s;
+    transform-origin: 50% 0;
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+  }
+
+  .dropdownBackground.open {
+    opacity: 1;
+  }
+
+  .arrow {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    display: block;
+    background: white;
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  .bio {
+    min-width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.7;
+  }
+
+  .bio img {
+    float: left;
+    margin-right: 20px;
+  }
+
+  .courses {
+    min-width: 300px;
+  }
+
+  .courses li {
+    padding: 10px 0;
+    display: block;
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+  }
+
+  .dropdown a {
+    text-decoration: none;
+    color: #ffc600;
+  }
+
+  .dropdown a.button {
+    background: black;
+    display: block;
+    padding: 10px;
+    color: white;
+    margin-bottom: 10px;
+  }
+
+  /* Matches Twitter, TWITTER, twitter, tWitter, TWiTTeR... */
+  .button[href*=twitter] { background: #019FE9; }
+  .button[href*=facebook] { background: #3B5998; }
+  .button[href*=courses] { background: #ffc600; }
