--- a/css/main.css
+++ b/css/main.css
@@ -335,22 +335,28 @@ a.button {
   background: #ffc600;
 }
 
-.theme {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+.setting {
+  cursor: pointer;
+  position: fixed;
+  right: 0px;
+  top: 29.5%;
+  border-radius: 6px 0px 0px 6px;
   margin-top: 13rem;
-  margin-right: 0.1rem;
+}
+
+.setting__img {
+  width: 35px;
+}
+
+.theme {
+  display: none;
+  z-index: 17000;
+  cursor: pointer;
+  position: fixed;
+  right: 35px;
+  top: 26%;
+  border-radius: 6px 0px 0px 6px;
+  margin-top: 13rem;
 }
 
 .theme .theme__dv {
@@ -362,6 +368,20 @@ a.button {
   border: 1px solid #000;
   cursor: pointer;
   margin-top: 1rem;
+  min-width: 80px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  font-size: 0.8rem;
+  font-weight: 700;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .theme .theme__1 {
