--- a/sass/main.scss
+++ b/sass/main.scss
@@ -122,6 +122,8 @@ $white: #fff;
 }
 
 
+
+
 // clock
 #clock {
     width: 100%;
@@ -268,14 +270,32 @@ $white: #fff;
 
 
   // change background-theme
+
+  .setting {
+    cursor: pointer;
+    position: fixed;
+    right: 0px;
+    top: 29.5%;
+    border-radius: 6px 0px 0px 6px;
+ margin-top: 13rem;
+  }
+
+  .setting__img {
+    width: 35px;
+  }
+
 .theme {
-  
-display: flex;
-justify-content: flex-end;
-flex-direction: column;
-align-items: flex-end;
-margin-top: 13rem;
-margin-right: 0.1rem;
+  display: none;
+  z-index: 17000;
+    // width: 100px;
+    // height: 94px;
+    // background-color: rgb(0, 158, 127);
+    cursor: pointer;
+    position: fixed;
+    right: 35px;
+    top: 26%;
+    border-radius: 6px 0px 0px 6px;
+ margin-top: 13rem;
   .theme__dv {
     width: 50px;
     height: 50px;
@@ -285,7 +305,26 @@ margin-right: 0.1rem;
     border: 1px solid #000;
     cursor: pointer;
    margin-top: 1rem;
-  }
+
+  //  width: auto;
+  //   height: 35px;
+    min-width: 80px;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    // background-color: rgb(255, 255, 255);
+    font-size: 0.8rem;
+    font-weight: 700;
+    // color: rgb(0, 158, 127);
+    overflow: hidden;
+    // border-radius: 6px;
+    // margin: 0px 10px 10px;
+    // border: none;
+    cursor: pointer;
+}
+
   .theme__1 {
     background-color: #7CEC9F;
     
