--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ body {
   font-size: 16px;
 }
 
+img {
+  max-width: 100%;
+}
+
 #loader {
   position: absolute;
   top: 50%;
@@ -394,5 +398,62 @@ a.button {
 
 .theme .theme__3 {
   background-color: #FD79A8;
+}
+
+.avatar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 4rem;
+}
+
+.avatar .avatar__img {
+  margin: 0 auto;
+  width: 150px;
+  border-radius: 50%;
+}
+
+.typer__contain {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 2rem;
+}
+
+.typer__h1 {
+  color: #331772;
+}
+
+.txt-type {
+  color: #815CBF;
+}
+
+.desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 3rem;
+}
+
+.desc__contents {
+  max-width: 60ch;
+  padding-bottom: 4rem;
+  line-height: 1.8;
 }
 /*# sourceMappingURL=main.css.map */
