--- a/css/main.css
+++ b/css/main.css
@@ -167,7 +167,7 @@ img {
   width: 100%;
   text-align: center;
   font-size: 1rem;
-  color: #845EC2;
+  color: #845ec2;
   text-align: center;
   font-family: Helvetica, sans-serif;
   margin-top: 1.3rem;
@@ -186,7 +186,7 @@ nav {
 }
 
 .cool > li > a {
-  color: #DEB2FF;
+  color: #deb2ff;
   text-decoration: none;
   font-size: 20px;
   background: rgba(0, 0, 0, 0.2);
@@ -328,15 +328,15 @@ a.button {
 }
 
 /* Matches Twitter, TWITTER, twitter, tWitter, TWiTTeR... */
-.button[href*=twitter] {
-  background: #019FE9;
+.button[href*="twitter"] {
+  background: #019fe9;
 }
 
-.button[href*=facebook] {
-  background: #3B5998;
+.button[href*="facebook"] {
+  background: #3b5998;
 }
 
-.button[href*=courses] {
+.button[href*="courses"] {
   background: #ffc600;
 }
 
@@ -370,7 +370,9 @@ a.button {
   height: 50px;
 }
 
-.theme .theme__1, .theme .theme__2, .theme .theme__3 {
+.theme .theme__1,
+.theme .theme__2,
+.theme .theme__3 {
   border: 1px solid #000;
   cursor: pointer;
   margin-top: 1rem;
@@ -391,7 +393,7 @@ a.button {
 }
 
 .theme .theme__1 {
-  background-color: #7CEC9F;
+  background-color: #7cec9f;
 }
 
 .theme .theme__2 {
@@ -399,7 +401,7 @@ a.button {
 }
 
 .theme .theme__3 {
-  background-color: #FD79A8;
+  background-color: #fd79a8;
 }
 
 .avatar {
@@ -440,7 +442,7 @@ a.button {
 }
 
 .txt-type {
-  color: #815CBF;
+  color: #815cbf;
 }
 
 .desc {
@@ -511,7 +513,7 @@ a.button {
 }
 
 .skills__h2 {
-  color: #6E4AAC;
+  color: #6e4aac;
   padding-bottom: 0.5rem;
 }
 
@@ -630,5 +632,477 @@ a.button {
 .portfolio__div2 {
   padding-top: 1rem;
   padding-left: 5rem;
+}
+
+.player-container {
+  padding: 40px;
+  max-width: 700px;
+  margin: auto;
+}
+
+.player {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  -webkit-box-shadow: 0px 10px 0px -3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 10px 0px -3px rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+  background: #000000;
+}
+
+.player:-webkit-full-screen {
+  padding-bottom: 100vh;
+}
+
+.player:-moz-full-screen {
+  padding-bottom: 100vh;
+}
+
+.player:-ms-fullscreen {
+  padding-bottom: 100vh;
+}
+
+.player:fullscreen {
+  padding-bottom: 100vh;
+}
+
+.player:-webkit-full-screen {
+  padding-bottom: 100vh;
+}
+
+.player:-moz-full-screen {
+  padding-bottom: 100vh;
+}
+
+.player:-ms-fullscreen {
+  padding-bottom: 100vh;
+}
+
+.player video {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.controls {
+  padding: 0;
+  position: absolute;
+  bottom: -80px;
+  width: 100%;
+  height: 48px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(10%, rgba(37, 37, 37, 0)), color-stop(80%, rgba(37, 37, 37, 0.6)));
+  background: linear-gradient(180deg, rgba(37, 37, 37, 0) 10%, rgba(37, 37, 37, 0.6) 80%);
+  -webkit-transition: all 0.2s ease-in 5s;
+  transition: all 0.2s ease-in 5s;
+}
+
+.player:hover .controls {
+  bottom: 0;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+.time {
+  position: absolute;
+  right: 30px;
+  bottom: 100%;
+  padding-bottom: 14px;
+}
+
+.progress {
+  height: 8px;
+  width: calc(100% - 40px);
+  background: rgba(60, 60, 60, 0.6);
+  margin: auto;
+  border-radius: 6px;
+  position: absolute;
+  left: 20px;
+  bottom: 100%;
+  -webkit-transition: height 0.1s ease-in-out;
+  transition: height 0.1s ease-in-out;
+}
+
+.progress:hover {
+  height: 10px;
+}
+
+.progress-filled {
+  background: #0094ff;
+  width: 0%;
+  height: 100%;
+  border-radius: 6px;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+.controls-main {
+  width: calc(100% - 40px);
+  margin: auto;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.controls-left,
+.controls-right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+}
+
+.controls-left {
+  margin-left: 10px;
+}
+
+.controls-right {
+  margin-right: 10px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.volume {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.volume-btn {
+  margin-right: 10px;
+}
+
+.volume-btn #volume-off,
+.volume-btn #volume-high {
+  opacity: 0;
+}
+
+.volume-btn.loud #volume-high {
+  opacity: 1;
+}
+
+.volume-btn.muted #volume-off {
+  opacity: 1;
+}
+
+.volume-btn.muted #volume-high,
+.volume-btn.muted #volume-low {
+  opacity: 0;
+}
+
+.volume-slider {
+  height: 8px;
+  width: 80px;
+  background: rgba(60, 60, 60, 0.6);
+  border-radius: 6px;
+  position: relative;
+}
+
+.volume-filled {
+  background: #ffffff;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  -webkit-transition: width 0.2s ease-in-out;
+  transition: width 0.2s ease-in-out;
+}
+
+.volume-filled:hover,
+.play-btn:hover.play-btn:before,
+.play-btn:hover.play-btn:after {
+  background: #0094ff;
+}
+
+.play-btn {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  margin: auto;
+  -webkit-transform: rotate(-90deg) scale(0.8);
+          transform: rotate(-90deg) scale(0.8);
+  transition: -webkit-clip-path 0.3s ease-in 0.1s, shape-inside 0.3s ease-in 0.1s, transform 0.8s cubic-bezier(0.85, -0.25, 0.25, 1.425);
+}
+
+.play-btn.paused {
+  -webkit-transform: rotate(0deg);
+          transform: rotate(0deg);
+}
+
+.play-btn:before,
+.play-btn:after {
+  content: "";
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -webkit-transition: inherit;
+  transition: inherit;
+}
+
+.play-btn:before {
+  -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 40%, 0 40%);
+  shape-inside: polygon(0 10%, 100% 10%, 100% 40%, 0 40%);
+}
+
+.play-btn:after {
+  -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 90%, 0 90%);
+  shape-inside: polygon(0 60%, 100% 60%, 100% 90%, 0 90%);
+}
+
+.play-btn.paused:before {
+  -webkit-clip-path: polygon(10% 0, 90% 51%, 90% 51%, 10% 51%);
+  shape-inside: polygon(0 0, 100% 51%, 100% 51%, 0 51%);
+}
+
+.play-btn.paused:after {
+  -webkit-clip-path: polygon(10% 49.5%, 80% 49.5%, 90% 49.5%, 10% 100%);
+  shape-inside: polygon(10% 49.5%, 80% 49.5%, 90% 49.5%, 10% 100%);
+}
+
+button:focus {
+  outline: none;
+}
+
+.speed-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.speed-list li {
+  color: #ffffff;
+  padding: 5px;
+  cursor: default;
+}
+
+.speed-list li:hover,
+.speed-list li.active {
+  color: #0094ff;
+  font-weight: bold;
+}
+
+.fullscreen {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.mainWrapper {
+  margin-top: 7rem;
+  margin-bottom: 7rem;
+}
+
+.mainWrapper__h1 {
+  text-align: center;
+  padding-bottom: 3rem;
+}
+
+/* posts */
+.posts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media all and (max-width: 1310px) {
+  .posts {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.posts > * {
+  margin: 1rem;
+}
+
+.posts__post {
+  width: 390px;
+  height: 390px;
+  background-color: #f2b2ff;
+  -webkit-box-shadow: 0px 1.5px 12px blueviolet;
+          box-shadow: 0px 1.5px 12px blueviolet;
+  margin-top: 2rem;
+}
+
+.posts__imgDiv,
+.posts__title > a {
+  text-decoration: none;
+}
+
+.posts__heading {
+  width: 390px;
+  height: 90px;
+}
+
+.posts__avatarImg {
+  width: 50px;
+}
+
+.posts__img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  border: 0 none;
+  border-radius: 1000px;
+}
+
+.posts__featureImg,
+.posts__imgDiv {
+  width: 390px;
+  max-width: 100%;
+  margin-top: -26px;
+  margin-bottom: -48px;
+  height: 233px;
+  /* background: #f6f5f5 url(img/featureImg.jpg) no-repeat center center; */
+  background-size: cover;
+  cursor: pointer;
+}
+
+/* hover-effect on image */
+/* Zoom In #1 */
+.posts__imgDiv img {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.posts__imgDiv:hover img {
+  -webkit-transform: scale(1.03);
+  transform: scale(1.03);
+}
+
+.posts__title {
+  height: 40px;
+  padding: 1.5rem;
+  cursor: pointer;
+}
+
+.posts__description {
+  color: #64717c;
+  font-weight: bold;
+  line-height: 1.5rem;
+  font-size: 1.3rem;
+}
+
+.posts__description:hover {
+  color: blueviolet;
+}
+
+.posts__heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1.429rem;
+}
+
+.posts__heading > div {
+  margin-right: 25px;
+}
+
+.posts__href {
+  text-decoration: none;
+}
+
+.posts__avatarInfo > * {
+  margin: 1px 3px 8px 0px;
+}
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: "\002B";
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out;
+}
+
+.contact {
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+}
+
+.aside__icons {
+  margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-bottom: 2rem;
+  cursor: pointer;
+}
+
+.aside__icons i:hover {
+  color: blueviolet;
+}
+
+footer {
+  text-align: center;
 }
 /*# sourceMappingURL=main.css.map */
