--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,45 +1,44 @@
 // abstract = variables,function,mixins,placeholder
 
 // variables
-$primaryColor : #845EC2;
+$primaryColor: #845ec2;
 $pink: #ff506f;
 $white: #fff;
+$accent: #0094ff;
+$main: #ffffff;
 
 // base = normalize,reset,typography
-  * {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    scroll-margin-top: 100px;
-  }
-  
-  *,
-  *:before,
-  *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-  }
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  scroll-margin-top: 100px;
+}
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
 
-  body {
-    font-family: Helvetica, sans-serif;
-    font-size: 16px;
-    overflow-x: hidden;
-  }
+body {
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  overflow-x: hidden;
+}
 
-  img {
-    max-width: 100%;
-  }
-
+img {
+  max-width: 100%;
+}
 
 // other styles
-
 
 // loader
 
@@ -87,233 +86,236 @@ $white: #fff;
 
 @keyframes ani {
   0% {
-      width: 100px;
-      height: 100px;
+    width: 100px;
+    height: 100px;
   }
   10% {
-      width: 100px;
-      height: 100px;
+    width: 100px;
+    height: 100px;
   }
   50% {
-      width: 150px;
-      height: 150px;
+    width: 150px;
+    height: 150px;
   }
   90% {
-      width: 100px;
-      height: 100px;
+    width: 100px;
+    height: 100px;
   }
   100% {
-      width: 100px;
-      height: 100px;
+    width: 100px;
+    height: 100px;
   }
 }
 
 @keyframes rotate {
   0% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   10% {
-      transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   60% {
-      transform: rotate(90deg);
+    transform: rotate(90deg);
   }
   90% {
-      transform: rotate(90deg);
+    transform: rotate(90deg);
   }
   100% {
-      transform: rotate(90deg);
+    transform: rotate(90deg);
   }
 }
-
-
-
 
 // clock
 #clock {
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    color: $primaryColor;
-    text-align: center;
-    font-family: Helvetica, sans-serif;
-    margin-top: 1.3rem;
-    padding-bottom: 1rem;
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  color: $primaryColor;
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  margin-top: 1.3rem;
+  padding-bottom: 1rem;
 }
 
-
 /* navBar */
-  
-  nav {
-    background-color: #593796;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    perspective: 600px;
-  }
 
-  .cool > li > a {
-    color: #DEB2FF;
-    text-decoration: none;
-    font-size: 20px;
-    background: rgba(0,0,0,0.2);
-    padding: 15px 20px;
-    display: inline-block;
-    margin: 20px;
-    border-radius: 5px;
-  }
+nav {
+  background-color: #593796;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  perspective: 600px;
+}
 
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-  }
+.cool > li > a {
+  color: #deb2ff;
+  text-decoration: none;
+  font-size: 20px;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 15px 20px;
+  display: inline-block;
+  margin: 20px;
+  border-radius: 5px;
+}
 
-  .cool > li {
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 
-  .userImg {
-    width: 100px;
-    height: 100px;
-  }
+.cool > li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
 
-  .dropdown {
-    opacity: 0;
-    position: absolute;
-    overflow: hidden;
-    padding: 20px;
-    top: -20px;
-    border-radius: 2px;
-    transition: all 0.5s;
-    transform: translateY(100px);
-    will-change: opacity;
-    display: none;
-  }
+.userImg {
+  width: 100px;
+  height: 100px;
+}
 
-  .trigger-enter .dropdown {
-    display: block;
-  }
+.dropdown {
+  opacity: 0;
+  position: absolute;
+  overflow: hidden;
+  padding: 20px;
+  top: -20px;
+  border-radius: 2px;
+  transition: all 0.5s;
+  transform: translateY(100px);
+  will-change: opacity;
+  display: none;
+}
 
-  .trigger-enter-active .dropdown {
-    opacity: 1;
-  }
-  
-  .dropdownBackground {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    background: #fff;
-    border-radius: 4px;
-    box-shadow: 0 50px 100px rgba(50,50,93,.1), 0 15px 35px rgba(50,50,93,.15), 0 5px 15px rgba(0,0,0,.1);
-    transition: all 0.3s, opacity 0.1s, transform 0.2s;
-    transform-origin: 50% 0;
-    display: flex;
-    justify-content: center;
-    opacity: 0;
-  }
+.trigger-enter .dropdown {
+  display: block;
+}
 
-  .dropdownBackground.open {
-    opacity: 1;
-  }
+.trigger-enter-active .dropdown {
+  opacity: 1;
+}
 
-  .arrow {
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    display: block;
-    background: white;
-    transform: translateY(-50%) rotate(45deg);
-  }
+.dropdownBackground {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  background: #fff;
+  border-radius: 4px;
+  box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1),
+    0 15px 35px rgba(50, 50, 93, 0.15), 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s, opacity 0.1s, transform 0.2s;
+  transform-origin: 50% 0;
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+}
 
-  .bio {
-    min-width: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    line-height: 1.7;
-  }
+.dropdownBackground.open {
+  opacity: 1;
+}
 
-  .bio img {
-    float: left;
-    margin-right: 20px;
-  }
+.arrow {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  display: block;
+  background: white;
+  transform: translateY(-50%) rotate(45deg);
+}
 
-  .courses {
-    min-width: 300px;
-  }
+.bio {
+  min-width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1.7;
+}
 
-  .courses li {
-    padding: 10px 0;
-    display: block;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-  }
+.bio img {
+  float: left;
+  margin-right: 20px;
+}
 
-  .dropdown a {
-    text-decoration: none;
-    color: #ffc600;
-  }
+.courses {
+  min-width: 300px;
+}
 
-  a.button {
-    background: black;
-    display: block;
-    padding: 10px;
-    color: white;
-    margin-bottom: 10px;
-  }
+.courses li {
+  padding: 10px 0;
+  display: block;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
 
-  /* Matches Twitter, TWITTER, twitter, tWitter, TWiTTeR... */
-  .button[href*=twitter] { background: #019FE9; }
-  .button[href*=facebook] { background: #3B5998; }
-  .button[href*=courses] { background: #ffc600; }
+.dropdown a {
+  text-decoration: none;
+  color: #ffc600;
+}
 
+a.button {
+  background: black;
+  display: block;
+  padding: 10px;
+  color: white;
+  margin-bottom: 10px;
+}
 
-  // change background-theme
+/* Matches Twitter, TWITTER, twitter, tWitter, TWiTTeR... */
+.button[href*="twitter"] {
+  background: #019fe9;
+}
+.button[href*="facebook"] {
+  background: #3b5998;
+}
+.button[href*="courses"] {
+  background: #ffc600;
+}
 
-  .setting {
-    z-index: 99999;
-    cursor: pointer;
-    position: fixed;
-    right: 0px;
-    top: 29.5%;
-    border-radius: 6px 0px 0px 6px;
- margin-top: 13rem;
-  }
+// change background-theme
 
-  .setting__img {
-    width: 35px;
-  }
+.setting {
+  z-index: 99999;
+  cursor: pointer;
+  position: fixed;
+  right: 0px;
+  top: 29.5%;
+  border-radius: 6px 0px 0px 6px;
+  margin-top: 13rem;
+}
+
+.setting__img {
+  width: 35px;
+}
 
 .theme {
   display: none;
   z-index: 17000;
-    // width: 100px;
-    // height: 94px;
-    // background-color: rgb(0, 158, 127);
-    cursor: pointer;
-    position: fixed;
-    right: 35px;
-    top: 26%;
-    border-radius: 6px 0px 0px 6px;
- margin-top: 13rem;
+  // width: 100px;
+  // height: 94px;
+  // background-color: rgb(0, 158, 127);
+  cursor: pointer;
+  position: fixed;
+  right: 35px;
+  top: 26%;
+  border-radius: 6px 0px 0px 6px;
+  margin-top: 13rem;
   .theme__dv {
     width: 50px;
     height: 50px;
-    
   }
-  .theme__1, .theme__2, .theme__3 {
+  .theme__1,
+  .theme__2,
+  .theme__3 {
     border: 1px solid #000;
     cursor: pointer;
-   margin-top: 1rem;
+    margin-top: 1rem;
 
-  //  width: auto;
-  //   height: 35px;
+    //  width: auto;
+    //   height: 35px;
     min-width: 80px;
     display: inline-flex;
     -webkit-box-align: center;
@@ -329,37 +331,34 @@ $white: #fff;
     // margin: 0px 10px 10px;
     // border: none;
     cursor: pointer;
-}
+  }
 
   .theme__1 {
-    background-color: #7CEC9F;
-    
+    background-color: #7cec9f;
   }
   .theme__2 {
     background-color: #fff;
- 
   }
   .theme__3 {
-    background-color: #FD79A8;
+    background-color: #fd79a8;
   }
 }
 
 // avatar
 
 .avatar {
-display: flex;
-justify-content: center;
-margin-top: 4rem;
- 
-.avatar__img {
-  margin: 0 auto;
-  width: 150px;
-  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  margin-top: 4rem;
+
+  .avatar__img {
+    margin: 0 auto;
+    width: 150px;
+    border-radius: 50%;
+  }
 }
 
-}
-
-// typer 
+// typer
 
 .typer__contain {
   display: flex;
@@ -374,11 +373,10 @@ margin-top: 4rem;
 }
 
 .txt-type {
-  color: #815CBF;
+  color: #815cbf;
 }
 
 // description
-
 
 .desc {
   display: flex;
@@ -391,7 +389,6 @@ margin-top: 4rem;
   padding-bottom: 4rem;
   line-height: 1.8;
 }
-
 
 // Image slider
 
@@ -406,7 +403,7 @@ margin-top: 4rem;
 }
 
 .imgSlider__thumbnail {
- width: 300px;
+  width: 300px;
 }
 
 .imgSlider__prevbtn {
@@ -431,7 +428,7 @@ margin-top: 4rem;
 
 .skills__h1 {
   text-align: center;
- font-size: 2rem;
+  font-size: 2rem;
 }
 
 .skills__section {
@@ -445,23 +442,18 @@ margin-top: 4rem;
 }
 
 .skills__h2 {
-  color: #6E4AAC;
+  color: #6e4aac;
   padding-bottom: 0.5rem;
 }
 
-
-
 /* portfolio */
 .portfolio {
- 
   margin-bottom: 10rem;
-  
 }
 
 .portfolio__container {
- 
   display: flex;
-  justify-content:center;
+  justify-content: center;
   flex-wrap: wrap;
   margin-right: 3rem;
 }
@@ -473,7 +465,6 @@ margin-top: 4rem;
 .portfolio__dv {
   width: 200px;
   height: 98px;
- 
 }
 
 // .portfolio__dv + .portfolio__dv {
@@ -492,8 +483,6 @@ margin-top: 4rem;
   float: left;
   margin: 0 1%;
 }
-
-
 
 .portfolio__image {
   display: block;
@@ -560,4 +549,389 @@ margin-top: 4rem;
 .portfolio__div2 {
   padding-top: 1rem;
   padding-left: 5rem;
+}
+
+// html5 video player
+
+.player-container {
+  padding: 40px;
+  max-width: 700px;
+  margin: auto;
+}
+.player {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  box-shadow: 0px 10px 0px -3px rgba(0, 0, 0, 0.2);
+  position: relative;
+  overflow: hidden;
+  background: #000000;
+}
+.player:fullscreen {
+  padding-bottom: 100vh;
+}
+.player:-webkit-full-screen {
+  padding-bottom: 100vh;
+}
+.player:-moz-full-screen {
+  padding-bottom: 100vh;
+}
+.player:-ms-fullscreen {
+  padding-bottom: 100vh;
+}
+.player video {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.controls {
+  padding: 0;
+  position: absolute;
+  bottom: -80px;
+  width: 100%;
+  height: 48px;
+  box-sizing: border-box;
+  background: linear-gradient(
+    180deg,
+    rgba(37, 37, 37, 0) 10%,
+    rgba(37, 37, 37, 0.6) 80%
+  );
+  transition: all 0.2s ease-in 5s;
+}
+.player:hover .controls {
+  bottom: 0;
+  transition: all 0.2s ease-out;
+}
+.time {
+  position: absolute;
+  right: 30px;
+  bottom: 100%;
+  padding-bottom: 14px;
+}
+.progress {
+  height: 8px;
+  width: calc(100% - 40px);
+  background: rgba(60, 60, 60, 0.6);
+  margin: auto;
+  border-radius: 6px;
+  position: absolute;
+  left: 20px;
+  bottom: 100%;
+  transition: height 0.1s ease-in-out;
+}
+.progress:hover {
+  height: 10px;
+}
+.progress-filled {
+  background: $accent;
+  width: 0%;
+  height: 100%;
+  border-radius: 6px;
+  transition: all 0.1s;
+}
+.controls-main {
+  width: calc(100% - 40px);
+  margin: auto;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.controls-left,
+.controls-right {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.controls-left {
+  margin-left: 10px;
+}
+.controls-right {
+  margin-right: 10px;
+  justify-content: flex-end;
+}
+.volume {
+  display: flex;
+  align-items: center;
+}
+.volume-btn {
+  margin-right: 10px;
+}
+.volume-btn #volume-off,
+.volume-btn #volume-high {
+  opacity: 0;
+}
+.volume-btn.loud #volume-high {
+  opacity: 1;
+}
+.volume-btn.muted #volume-off {
+  opacity: 1;
+}
+.volume-btn.muted #volume-high,
+.volume-btn.muted #volume-low {
+  opacity: 0;
+}
+.volume-slider {
+  height: 8px;
+  width: 80px;
+  background: rgba(60, 60, 60, 0.6);
+  border-radius: 6px;
+  position: relative;
+}
+.volume-filled {
+  background: $main;
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  transition: width 0.2s ease-in-out;
+}
+.volume-filled:hover,
+.play-btn:hover.play-btn:before,
+.play-btn:hover.play-btn:after {
+  background: $accent;
+}
+
+.play-btn {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  margin: auto;
+  transform: rotate(-90deg) scale(0.8);
+  transition: -webkit-clip-path 0.3s ease-in 0.1s,
+    shape-inside 0.3s ease-in 0.1s,
+    transform 0.8s cubic-bezier(0.85, -0.25, 0.25, 1.425);
+}
+.play-btn.paused {
+  transform: rotate(0deg);
+}
+.play-btn:before,
+.play-btn:after {
+  content: "";
+  position: absolute;
+  background: white;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: inherit;
+}
+.play-btn:before {
+  -webkit-clip-path: polygon(0 10%, 100% 10%, 100% 40%, 0 40%);
+  shape-inside: polygon(0 10%, 100% 10%, 100% 40%, 0 40%);
+}
+.play-btn:after {
+  -webkit-clip-path: polygon(0 60%, 100% 60%, 100% 90%, 0 90%);
+  shape-inside: polygon(0 60%, 100% 60%, 100% 90%, 0 90%);
+}
+.play-btn.paused:before {
+  -webkit-clip-path: polygon(10% 0, 90% 51%, 90% 51%, 10% 51%);
+  shape-inside: polygon(0 0, 100% 51%, 100% 51%, 0 51%);
+}
+.play-btn.paused:after {
+  -webkit-clip-path: polygon(10% 49.5%, 80% 49.5%, 90% 49.5%, 10% 100%);
+  shape-inside: polygon(10% 49.5%, 80% 49.5%, 90% 49.5%, 10% 100%);
+}
+button:focus {
+  outline: none;
+}
+.speed-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  margin-right: 20px;
+  text-align: center;
+}
+.speed-list li {
+  color: $main;
+  padding: 5px;
+  cursor: default;
+}
+.speed-list li:hover,
+.speed-list li.active {
+  color: $accent;
+  font-weight: bold;
+}
+.fullscreen {
+  display: flex;
+  justify-content: center;
+}
+
+// blogs
+
+.mainWrapper {
+  margin-top: 7rem;
+  margin-bottom: 7rem;
+}
+
+.mainWrapper__h1 {
+  text-align: center;
+  padding-bottom: 3rem;
+}
+
+/* posts */
+
+.posts {
+  display: flex;
+  justify-content: center;
+}
+
+@media all and (max-width: 1310px) {
+  .posts {
+    flex-wrap: wrap;
+  }
+}
+.posts > * {
+  margin: 1rem;
+}
+
+.posts__post {
+  width: 390px;
+  height: 390px;
+  background-color: rgb(242, 178, 255);
+  box-shadow: 0px 1.5px 12px blueviolet;
+  margin-top: 2rem;
+}
+
+.posts__imgDiv,
+.posts__title > a {
+  text-decoration: none;
+}
+.posts__heading {
+  width: 390px;
+  height: 90px;
+}
+.posts__avatarImg {
+  width: 50px;
+}
+.posts__img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+  border: 0 none;
+  border-radius: 1000px;
+}
+.posts__featureImg,
+.posts__imgDiv {
+  width: 390px;
+  max-width: 100%;
+  margin-top: -26px;
+  margin-bottom: -48px;
+  height: 233px;
+  /* background: #f6f5f5 url(img/featureImg.jpg) no-repeat center center; */
+  background-size: cover;
+  cursor: pointer;
+}
+
+/* hover-effect on image */
+/* Zoom In #1 */
+.posts__imgDiv img {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+.posts__imgDiv:hover img {
+  -webkit-transform: scale(1.03);
+  transform: scale(1.03);
+}
+.posts__title {
+  height: 40px;
+  padding: 1.5rem;
+  cursor: pointer;
+}
+.posts__description {
+  color: #64717c;
+  font-weight: bold;
+  line-height: 1.5rem;
+  font-size: 1.3rem;
+}
+
+.posts__description:hover {
+  color: blueviolet;
+}
+
+.posts__heading {
+  display: flex;
+  padding: 1.429rem;
+}
+.posts__heading > div {
+  margin-right: 25px;
+}
+
+.posts__href {
+  text-decoration: none;
+}
+
+.posts__avatarInfo > * {
+  margin: 1px 3px 8px 0px;
+}
+
+//  faq
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: "\002B";
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+// contact me
+
+.contact {
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 3rem;
+}
+
+.aside__icons {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 2rem;
+
+  cursor: pointer;
+}
+
+.aside__icons i:hover {
+  color: blueviolet;
+}
+
+// footer
+
+footer {
+  text-align: center;
 }
